// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sandbox/Filter Button 1`] = `
.c0 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c0:hover {
  color: #474747;
}

@media (max-width:743px) {
  .c0 {
    padding: 5px 16px;
  }
}

<div
  data-dark={false}
>
  <button
    className="c0"
  >
    Label
  </button>
</div>
`;

exports[`Storyshots Sandbox/Filter Default 1`] = `
.c3 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.c3:hover {
  color: #474747;
}

.c1 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.c1:hover {
  color: #474747;
}

.c2 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c2:hover {
  color: #474747;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:743px) {
  .c3 {
    padding: 5px 16px;
  }
}

@media (max-width:743px) {
  .c1 {
    padding: 5px 16px;
  }
}

@media (max-width:743px) {
  .c2 {
    padding: 5px 16px;
  }
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <a
      href="/0"
      onClick={[Function]}
    >
      <span
        className="c1"
      >
        新しい順
      </span>
    </a>
    <span
      className="c2"
    >
      古い順
    </span>
    <button
      className="c3"
      onClick={[Function]}
    >
      人気順
    </button>
    <a
      href="/3"
      onClick={[Function]}
    >
      <span
        className="c1"
      >
        これはリンク
      </span>
    </a>
    <button
      className="c3"
      onClick={[Function]}
    >
      これはボタン
    </button>
  </div>
</div>
`;

exports[`Storyshots Sandbox/Filter Link 1`] = `
.c0 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c0:hover {
  color: #474747;
}

@media (max-width:743px) {
  .c0 {
    padding: 5px 16px;
  }
}

<div
  data-dark={false}
>
  <span
    className="c0"
  >
    Label
  </span>
</div>
`;
